# shoprec

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  rewrite_git_dates.ps1  rewrite_git_dates.sh
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
configs/: demo_config.json  my_config.json  my_experiment.json  test_run.json  training_example.json
data/: fake_purchases.csv
docs/: ERROR_HANDLING.md  PERFORMANCE_LOGGING.md  architecture.md  portfolio.md
models/: embedding_metadata.joblib  product_embeddings.joblib  svd_model.joblib
models/experiment_1/: svd_model.joblib
models/hybrid/: embedding_metadata.joblib  product_embeddings.joblib  user_id_mapping.joblib
models/my_model/: svd_model.joblib
models/prod/: product_id_mapping.joblib  svd_model.joblib
models/test/: svd_model.joblib
notebooks/: explore.ipynb
notebooks/.ipynb_checkpoints/: explore-checkpoint.ipynb
scripts/: generate_fake_data.py  lint_all.ps1  lint_all.py  lint_all.sh  predict_cli.py  train_model.py
src/: __init__.py
src/api/: __init__.py  exceptions.py  logging_config.py  main.py  metrics.py
src/api/routes/: __init__.py  recommend.py
src/recommender/: __init__.py  embed.py  hybrid.py  infer.py  train.py  utils.py
src/shoprec/: __init__.py
tests/: __init__.py  test_api.py  test_e2e.py  test_error_handling.py  test_hybrid.py  test_infer.py  test_train.py
