[project]
name = "shoprec"
version = "0.1.0"
description = ""
authors = [
    {name = "msbutt1",email = "msbutt112004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "shoprec", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
